--- a/config.json
+++ b/config.json
@@ -1,20 +1,25 @@
 {
-  "name": "HOME003",
+  "name": "PI02",
   "mqtt": {
-    "host": "127.0.0.1",
+    "host": "10.0.0.8",
     "port": 1883,
     "base_topic": "homeassistant"
   },
-  "mi_flora": [
+  "sensors": [
     {
       "device_id": "lvluo",
-      "mac": "C4:7C:8D:6B:0B:E3"
+      "mac": "C4:7C:8D:6B:0B:E3",
+      "type": "mi_flora"
     },
     {
       "device_id": "xiezhualan",
-      "mac": "C4:7C:8D:6B:0A:8C"
+      "mac": "C4:7C:8D:6B:0A:8C",
+      "type": "mi_flora"
+    },
+    {
+      "device_id": "tem",
+      "mac": "C4:7C:8D:6B:0B:E3",
+      "type": "mi_tempbt"
     }
-  ],
-  "mi_hygrothermo": [
   ]
 }
