--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "name": "PI02",
   "mqtt": {
-    "host": "127.0.0.1",
+    "host": "10.23.100.11",
     "port": 1883,
     "username": "",
     "passowrd": "",
@@ -25,7 +25,7 @@
     {
       "device_id": "mi_tempbt",
       "mac": "58:2D:34:34:A4:A7",
-      "type": "mi_temphu"
+      "type": "mi_tempbt"
     }
   ]
 }
