--- a/template.service
+++ b/template.service
@@ -8,7 +8,7 @@ Type=notify
 User=daemon
 Group=daemon
 WorkingDirectory=/opt/mqtt-gateway/
-ExecStart=python3 /opt/mqtt-gateway/gateway.py
+ExecStart=/opt/mqtt-gateway/gateway.py
 StandardOutput=null
 StandardError=journal
 Environment=PYTHONUNBUFFERED=true
